@@ -80,3 +80,4 @@
 2.1.13 - Updated: improved compatibility with PHP versions 7.2,7.4
 2.1.14 - Fixed: treated a rare situation where the payment module cannot be instantiated
        - Fixed: functionality of Packeta widget button in KnowBand SuperCheckout when no shipping method is preselected
+       - Fixed: deprecated hook backOfficeHeader replaced by displayBackOfficeHeader
